Nettoyage css et correction alignement atout

--- a/styles/items.less
+++ b/styles/items.less
@@ -1,10 +1,13 @@
 .penombre {
-  &.atout  {
+  &.atout {
     .atout-content .standard-form {
       .logo-frame {
         display: flex;
         justify-content: space-between;
 
+        .logo-img {
+          width: 80px;
+        }
         .name {
           width: calc(100% - 90px);
         }
@@ -18,6 +21,9 @@
         display: flex;
         justify-content: space-between;
 
+        .logo-img {
+          width: 80px;
+        }
         .name {
           width: calc(100% - 90px);
         }
@@ -25,25 +31,24 @@
     }
   }
 
-
   &.pouvoir {
-    .atout-content .standard-form {
-
+    .pouvoir-content .standard-form {
+      .logo-frame {
+        display: flex;
+        justify-content: space-between;
+        .logo-img {
+          width: 80px;
+        }
+        .name {
+          width: calc(100% - 90px);
+        }
+      }
       .details {
         display: flex;
         justify-content: space-between;
 
         select[name="system.type"] {
           width: 100px;
-        }
-      }
-
-      .logo-frame {
-        display: flex;
-        justify-content: space-between;
-
-        .name {
-          width: calc(100% - 90px);
         }
       }
     }
