--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -485,6 +485,7 @@ body {
 
           .logo-img {
             border-radius: @border-radius;
+            width: 150px;
           }
         }
 
